# JittorInfer

./: .all-contributorsrc  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  format.sh
.github/workflows/: clang-format.yml
common/: chat-template.hpp  chat_local.cpp  chat_local.h  common_local.cpp  common_local.h  json-schema-to-grammar_local.cpp  json-schema-to-grammar_local.h  sampling_local.cpp  sampling_local.h  try_flash_attn.cpp  utils.hpp
configs/: config_deepseek_v2.yaml  config_deepseek_v2_ep.yaml  config_deepseek_v2_lite.yaml  config_deepseek_v2_lite_ep.yaml
examples/: CMakeLists.txt  README.md
examples/mpi_server/: CMakeLists.txt  server.cpp
examples/server/: CMakeLists.txt  server.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml-alloc.h  ggml-backend.h  ggml-cann.h  ggml-cpp.h  ggml-cpu.h  ggml.h  gguf.h
ggml/src/: CMakeLists.txt  ggml-alloc.c  ggml-backend-impl.h  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-common.h  ggml-impl.h  ggml-quants.c  ggml-quants.h  ggml-threading.cpp  ggml.c  gguf.cpp
ggml/src/ggml-cann/: CMakeLists.txt  acl_tensor.cpp  acl_tensor.h  aclnn_ops.cpp  aclnn_ops.h  ascend_graph.cpp  ascend_graph.h  ascend_graph_ops.cpp  ascend_graph_ops.h  ascend_graph_ops_create.cpp  ascend_graph_ops_create.h  common.h  fusion_switch.cfg  ggml-cann.cpp  rope_cache.cpp  rope_cache.h
ggml/src/ggml-cann/kernels/: CMakeLists.txt  ascendc_kernels.h  custom_rope_cache_ext.cpp  custom_rope_ext.cpp  dup.cpp  get_row_f16.cpp  get_row_f32.cpp  get_row_q4_0.cpp  quantize_f16_q8_0.cpp  quantize_f32_q8_0.cpp  quantize_float_to_q4_0.cpp
ggml/src/ggml-cann/kernels/custom_rope_ext/: rope_ext_custom.json  rope_ext_custom_v2.json
ggml/src/ggml-cann/kernels/custom_rope_ext/op_project/framework/tf_plugin/: tensorflow_rope_ext_custom_plugin.cc  tensorflow_rope_ext_custom_v3_plugin.cc
ggml/src/ggml-cann/kernels/custom_rope_ext/op_project/op_host/: rope_ext_custom.cpp  rope_ext_custom_tiling.h  rope_ext_custom_v2.cpp  rope_ext_custom_v2_tiling.h
ggml/src/ggml-cann/kernels/custom_rope_ext/op_project/op_kernel/: rope_ext_custom.cpp  rope_ext_custom_v2.cpp
ggml/src/ggml-cpu/: cpu-feats-x86.cpp  ggml-cpu-aarch64.cpp  ggml-cpu-hbm.cpp  ggml-cpu-impl.h  ggml-cpu-quants.c  ggml-cpu-quants.h  ggml-cpu.c  ggml-cpu.cpp
ggml/src/ggml-cpu/amx/: amx.cpp  common.h  mmq.cpp
ggml/src/ggml-cpu/kleidiai/: kernels.cpp  kernels.h  kleidiai.cpp  kleidiai.h
ggml/src/ggml-cpu/llamafile/: sgemm.cpp  sgemm.h
include/: llama.h
script/: test_benchmark.sh
src/: CMakeLists.txt  llama-adapter.h  llama-arch.cpp  llama-arch.h  llama-batch.cpp  llama-batch.h  llama-chat.cpp  llama-context-load-utils.cpp  llama-context.cpp  llama-context.h  llama-cparams.h  llama-execute-decode.cpp  llama-execute-kvupdate.cpp  llama-graph-attn.cpp  llama-graph-builder.cpp  llama-graph-builder.h  llama-graph-deepseek2.cpp  llama-graph-deepseek2.h  llama-graph-deepseek2ge.cpp  llama-graph-deepseek2ge.h  llama-graph-defrag.cpp  llama-graph-defrag.h  llama-graph-ffn.cpp  llama-graph-utils.cpp  llama-graph-utils.h  llama-hparams.cpp  llama-hparams.h  llama-impl.cpp  llama-impl.h  llama-mmap.cpp  llama-mmap.h  llama-model-load-utils.cpp  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama-model.h  llama-params.cpp  llama-sampling.cpp  llama-vocab.cpp  llama-vocab.h  (+5 more)
tests/: CMakeLists.txt
tests/main/: CMakeLists.txt  README.md  chat_local.cpp  chat_local.h  common_local.cpp  common_local.h  multi_sequence.cpp  sampling_local.cpp  sampling_local.h  single_sequence.cpp
tests/ops/: CMakeLists.txt  flash_attn_aclnn.cpp  flash_attn_cpu.cpp  flash_attn_cpu.h  ops_test.cpp  ops_test_case.cpp  ops_test_case.h  test_ops_speed.cpp
